update add entity modal height to avoid overflow for mobile

--- a/client/src/components/Letterbox/CreateCinemaModal/CreateCinemaModal.module.css
+++ b/client/src/components/Letterbox/CreateCinemaModal/CreateCinemaModal.module.css
@@ -162,7 +162,7 @@ input[type="file"] {
   }
 
   .formFields {
-    height: 310px;
+    height: 250px;
   }
 
   .formGroup {
