--- a/client/src/components/Letterbox/CreateMovieModal/CreateMovieModal.module.css
+++ b/client/src/components/Letterbox/CreateMovieModal/CreateMovieModal.module.css
@@ -239,7 +239,7 @@ input[type="file"] {
   }
 
   .formFields {
-    max-height: 310px;
+    max-height: 250px;
   }
 
   .formGroup {
